# fine-tuning-llms-with-kg

./: .gitignore  Data_analysis_over_graphs.ipynb  KG.py  NeSyKGLLM_Simple.ipynb  README.md  docker-compose.yml  plot_utils.py  pyproject.toml  requirements.txt  rules.py
.data/David/: entity2id.txt  relation2id.txt  sillyKG.csv  sillyKG.nt
.data/FrenchRoyalty/: french_royalty.nt  french_royalty_filtered.csv  rules_PCA_1.csv  rules_Std_1.csv
.data/Movies/: movies.ttl  movies_KG.csv  movies_KG.nt
.data/SimpleKG/: simpleKG.csv  simpleKG.nt
.data/Simpsons/: simpsons.csv  simpsons.nt  simpsons.ttl
.experiments/CreatingFRCoTs/: rule_2.txt  rule_4.txt  rule_5.txt  rules_summary.txt
configurations/: example_configuration.json  fine_tuning_fr.json  french_royalty.json  gen_fr_cots.json  generate_french_royalty_cots.json  generate_triples_fr.json  simpsons.json
configurations/complete_graph/: french_royalty.json
configurations/gen_triples/: french_royalty.json  generate_triples_david.json  generate_triples_fr.json  movies.json  moviesKG_config.json  simpleKG_config.json  simpsons.json
configurations/tests/: complete.json  missing_cot.json  (+4 more)
old_to_refactor_scripts/: fine_tuning_experiments.py  gen_cots.py  model.py
src/: KG.py  complex_functions.py  config.py  configuration.py  cot_generation_config.py  create_synthetic_graph.py  download_graph.py  evaluation.py  fine_tuning_experiments.py  gen_triples.py  generate_cots.py  graph_completion.py  graph_metrics.py  graphs.py  knowledge_graphs.py  main.py  model.py  queries.py  rules.py  sparql.py  synthetic_graph_generation.py  temp_test.py  toy_graphs.py  training.py  triple_generation.py  utils.py  visualization.py
test/: generate_cots.py  load_configuration.py
utils/: plot_utils.py
(+67 files in other folders)
